--- a/ONtime/public_html/ProductDetails.html
+++ b/ONtime/public_html/ProductDetails.html
@@ -42,7 +42,7 @@ and open the template in the editor.
             </button>
         </section>
 
-        <section class="collapse navbar-collapse" id="myNavbar">
+        <section class="collapse navbar-collapse container-fluid" id="myNavbar">
 
             <ul class="nav navbar-nav">
                 <li class="dropdown">
@@ -67,167 +67,127 @@ and open the template in the editor.
 
 
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="shoppingcart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
                 <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             </ul>
         </section>
-        <<nav class="navbar navbar-custom navbar-fixed-top navbar-inverse">
-            <div id="topnav-centered">
-                <a class="navbar-brand" href="index.html"><img src="images\logo_clr.png" alt="Ontime logo"></a>
-            </div>
-
-            <section class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </section>
-
-            <section class="collapse navbar-collapse" id="myNavbar">
-
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span
-                                class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="products.html#hot">Top selling</a></li>
-                            <li><a href="products.html#newarr">Newest</a></li>
-                            <li><a href="products.html">All</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Customer service<span
-                                class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="customerservice.html#Maintenance">Maintainence</a></li>
-                            <li><a href="customerservice.html#FAQ">Faq</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="productsreview.html">Reviews</a></li>
-                    <li><a href="aboutus.html">About us</a></li>
-                </ul>
-
-
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                </ul>
-            </section>
     </nav>
-    <!----------------------   Single Product Carousel   ------------------------------------------>
-    <article class="singleProduct">
-        <section class="container">
-            <section class=row>
-                <section class="col-md-5">
 
-                    <!--   Slider Carousel  -->
-                    <section>
-                        <div class="container-fluid">
-                            <div id="product-slider" class="carousel slide" data-ride="carousel">
+    <body>
+        <!----------------------   Single Product Carousel   ------------------------------------------>
+        <article class="singleProduct">
+            <section class="container">
+                <section class=row>
+                    <section class="col-md-5">
 
-                                <!-- Wrapper for slides -->
-                                <div class="carousel-inner">
-                                    <figure class="carousel-item active">
-                                        <img src="img/WatchM1.jpg" alt="Buring Watch " class="d-block w-100">
-                                    </figure>
-                                    <figure class="carousel-item">
-                                        <img src="img/WatchM2.jpg" alt="Buring Watch" class="d-block w-100">
-                                    </figure>
-                                    <figure class="carousel-item">
-                                        <img src="img/WatchM3.jpg" alt="Timberland Watch" class="d-block w-100">
-                                    </figure>
-                                    <figure class="carousel-item">
-                                        <img src="img/WatchM4.jpg" alt="Timberland Watch" class="d-block w-100">
-                                    </figure>
-                                    <figure class="carousel-item">
-                                        <img src="img/WatchF1.jpg" alt=" Oliva Burton Watch" class="d-block w-100">
-                                    </figure>
-                                    <figure class="carousel-item">
-                                        <img src="img/WatchF2.jpg" alt="Paul Hewitt Watch" class="d-block w-100">
-                                    </figure>
-                                    <figure class="carousel-item">
-                                        <img src="img/WatchF3.jpg" alt="Paul Hewitt Watch" class="d-block w-100">
-                                    </figure>
+                        <!--   Slider Carousel  -->
+                        <section>
+                            <div class="container-fluid">
+                                <div id="product-slider" class="carousel slide" data-ride="carousel">
 
+                                    <!-- Wrapper for slides -->
+                                    <div class="carousel-inner">
+                                        <figure class="carousel-item active">
+                                            <img src="img/WatchM1.jpg" alt="Buring Watch " class="d-block w-100">
+                                        </figure>
+                                        <figure class="carousel-item">
+                                            <img src="img/WatchM2.jpg" alt="Buring Watch" class="d-block w-100">
+                                        </figure>
+                                        <figure class="carousel-item">
+                                            <img src="img/WatchM3.jpg" alt="Timberland Watch" class="d-block w-100">
+                                        </figure>
+                                        <figure class="carousel-item">
+                                            <img src="img/WatchM4.jpg" alt="Timberland Watch" class="d-block w-100">
+                                        </figure>
+                                        <figure class="carousel-item">
+                                            <img src="img/WatchF1.jpg" alt=" Oliva Burton Watch" class="d-block w-100">
+                                        </figure>
+                                        <figure class="carousel-item">
+                                            <img src="img/WatchF2.jpg" alt="Paul Hewitt Watch" class="d-block w-100">
+                                        </figure>
+                                        <figure class="carousel-item">
+                                            <img src="img/WatchF3.jpg" alt="Paul Hewitt Watch" class="d-block w-100">
+                                        </figure>
+
+                                    </div>
+                                    <!-- Left and right controls -->
+                                    <a class="left carousel-control" href="#product-slider" data-slide="prev">
+                                        <i class="glyphicon glyphicon-chevron-left"></i>
+                                        <i class="sr-only">Previous</i>
+                                    </a>
+                                    <a class="right carousel-control" href="#product-slider" data-slide="next">
+                                        <i class="glyphicon glyphicon-chevron-right"></i>
+                                        <i class="sr-only">Next</i>
+                                    </a>
                                 </div>
-                                <!-- Left and right controls -->
-                                <a class="left carousel-control" href="#product-slider" data-slide="prev">
-                                    <i class="glyphicon glyphicon-chevron-left"></i>
-                                    <i class="sr-only">Previous</i>
-                                </a>
-                                <a class="right carousel-control" href="#product-slider" data-slide="next">
-                                    <i class="glyphicon glyphicon-chevron-right"></i>
-                                    <i class="sr-only">Next</i>
-                                </a>
                             </div>
-                        </div>
+                        </section>
+
+                        <section class="col-md-7">
+                            <p class="new-arrival text-center">NEW</p>
+                            <h2>Men and Women's Watches</h2>
+                            <p>Product Code: A12345Z </p>
+                            <figure class="star-rating">
+                                <span class="fa fa-star" data-rating="1"></span>
+                                <span class="fa fa-star" data-rating="2"></span>
+                                <span class="fa fa-star" data-rating="3"></span>
+                                <span class="fa fa-star" data-rating="4"></span>
+                                <span class="fa fa-star-half-o" data-rating="5"></span>
+                            </figure>
+                            <p class="price">SGD $40.00 </p>
+                            <p><b>Availability</b> In Stock </p>
+                            <p><b>Condition</b> New </p>
+                            <p><b>Brand</b> ABC.Co </p>
+                            <label>Quantity: </label>
+                            <input type="text" value="">
+                            <button type="button" class="btn btn-primary"> Add to Cart</button>
+                        </section>
                     </section>
 
-                    <section class="col-md-7">
-                        <p class="new-arrival text-center">NEW</p>
-                        <h2>Men and Women's Watches</h2>
-                        <p>Product Code: A12345Z </p>
-                        <figure class="star-rating">
-                            <span class="fa fa-star" data-rating="1"></span>
-                            <span class="fa fa-star" data-rating="2"></span>
-                            <span class="fa fa-star" data-rating="3"></span>
-                            <span class="fa fa-star" data-rating="4"></span>
-                            <span class="fa fa-star-half-o" data-rating="5"></span>
-                        </figure>
-                        <p class="price">SGD $40.00 </p>
-                        <p><b>Availability</b> In Stock </p>
-                        <p><b>Condition</b> New </p>
-                        <p><b>Brand</b> ABC.Co </p>
-                        <label>Quantity: </label>
-                        <input type="text" value="">
-                        <button type="button" class="btn btn-primary"> Add to Cart</button>
+                    <section class="productDescription">
+                        <section class="container">
+                            <h3>Product Description</h3>
+                            <p>This is the Product Description LOL. This is the Product Description LOL.This is the
+                                Product Description LOLThis is the Product Description LOL
+                                This is the Product Description LOLThis is the Product Description LOLThis is the
+                                Product Description LOLThis is the Product Description LOLThis is the Product
+                                Description LOL</p>
+
+                            <p>This is the Product Description LOL. This is the Product Description LOL.This is the
+                                Product Description LOLThis is the Product Description LOL
+                                This is the Product Description LOLThis is the Product Description LOLThis is the
+                                Product Description LOLThis is the Product Description LOLThis is the Product
+                                Description LOL</p>
+
+                            <hr />
+                        </section>
                     </section>
                 </section>
+        </article>
 
-                <section class="productDescription">
-                    <section class="container">
-                        <h3>Product Description</h3>
-                        <p>This is the Product Description LOL. This is the Product Description LOL.This is the Product
-                            Description LOLThis is the Product Description LOL
-                            This is the Product Description LOLThis is the Product Description LOLThis is the Product
-                            Description LOLThis is the Product Description LOLThis is the Product
-                            Description LOL</p>
-
-                        <p>This is the Product Description LOL. This is the Product Description LOL.This is the Product
-                            Description LOLThis is the Product Description LOL
-                            This is the Product Description LOLThis is the Product Description LOLThis is the Product
-                            Description LOLThis is the Product Description LOLThis is the Product
-                            Description LOL</p>
-
-                        <hr />
-                    </section>
-                </section>
-            </section>
-    </article>
-
-    <footer class="footer">
+        <footer class="footer">
             <div class=container>
                 <div class="row">
+
                     <div class="col-md-4">
                         <h1>Company</h1>
-                        <a href="aboutus.html">
-                            <p>About Us</p>
-                        </a>
-                        <a href=""><p>Contact Us</p>
-                        </a>
-                        </a>
-                        </section>
-                        <section class="col-md-4">
-                            <h1>Customer Support</h1>
-                            <a href="customerservice.html#FAQ">
-                                <p>FAQ</p>
-                            </a>
-                            <a href="">
-                                <p>Contact Us</p>
-                            </a>
-                            <a href="customerservice.html">
-                                    <p>Customer Service</p>
-                                </a>
+                        <p>About Us</p>
+                        <p>Contact Us</p>
                     </div>
+
+                    <div class="col-md-4">
+                        <h1>Customer Support</h1>
+                        <a href="">
+                            <p>FAQ</p>
+                        </a>
+                        <a href="">
+                            <p>Contact Us</p>
+                        </a>
+                        <a href="">
+                            <p>Customer Service</p>
+                        </a>
+                    </div>
+
                     <div class="col-md-4">
                         <h1>Follow Us On</h1>
                         <a href="https://www.facebook.com/">
@@ -248,6 +208,7 @@ and open the template in the editor.
                 <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
             </div>
         </footer>
+    </body>
 </body>
 
 </html>
