--- a/ONtime/public_html/ProductDetails.html
+++ b/ONtime/public_html/ProductDetails.html
@@ -7,77 +7,29 @@ and open the template in the editor.
 <html>
 
 <head>
-    <title>Product Details - OnTime</title>
-    <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
-    <meta name="keywords"
-        content="Watches, Watch, Strap, Minute, Second, Buying, Selling, Discount, Offer, Fix, Repair, Maintenance, New Arrivals, Gshock, Fossil, Tag Heuer, Fashion, Hand Accessory, Second Hand, Time, Time Keeper, Pocket Watch, Rolex">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/productDetails.css" type="text/css" />
-    <link rel="stylesheet" href="css/headerFooter.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-    </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-</head>
-
-<body>
-
-    <nav class="navbar navbar-custom navbar-fixed-top navbar-inverse">
-        <div id="topnav-centered">
-            <a class="navbar-brand" href="index.html"><img src="images\logo3.png" alt="Ontime logo"
-                    style="width:150px;height:60px;" /></a>
-        </div>
-
-        <section class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </section>
-
-        <section class="collapse navbar-collapse container-fluid" id="myNavbar">
-
-            <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="products.html#hot">Top selling</a></li>
-                        <li><a href="products.html#newarr">Newest</a></li>
-                        <li><a href="products.html">All</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Customer service<span
-                            class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="customerservice.html#Maintenance">Maintainence</a></li>
-                        <li><a href="customerservice.html#FAQ">Faq</a></li>
-                    </ul>
-                </li>
-                <li><a href="productsreview.html">Reviews</a></li>
-                <li><a href="aboutus.html">About us</a></li>
-            </ul>
-
-
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="shoppingcart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
-                <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            </ul>
-        </section>
-    </nav>
+        <title>Product Details</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/main.css" type="text/css"/>
+        <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+        </script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    </head>
 
     <body>
         <!----------------------   Single Product Carousel   ------------------------------------------>
-        <article class="singleProduct">
+        <article class = "singleProduct">
             <section class="container">
-                <section class=row>
+                <section class =row>
                     <section class="col-md-5">
 
                         <!--   Slider Carousel  -->
@@ -88,25 +40,25 @@ and open the template in the editor.
                                     <!-- Wrapper for slides -->
                                     <div class="carousel-inner">
                                         <figure class="carousel-item active">
-                                            <img src="img/WatchM1.jpg" alt="Buring Watch " class="d-block w-100">
+                                            <img src="img/WatchM1.jpg" alt="Buring Watch "  class="d-block w-100" >
                                         </figure>
                                         <figure class="carousel-item">
-                                            <img src="img/WatchM2.jpg" alt="Buring Watch" class="d-block w-100">
+                                            <img src="img/WatchM2.jpg" alt="Buring Watch" class="d-block w-100" >
                                         </figure>
                                         <figure class="carousel-item">
-                                            <img src="img/WatchM3.jpg" alt="Timberland Watch" class="d-block w-100">
+                                            <img src="img/WatchM3.jpg" alt="Timberland Watch" class="d-block w-100" >
                                         </figure>
                                         <figure class="carousel-item">
-                                            <img src="img/WatchM4.jpg" alt="Timberland Watch" class="d-block w-100">
+                                            <img src="img/WatchM4.jpg" alt="Timberland Watch" class="d-block w-100" >
                                         </figure>
                                         <figure class="carousel-item">
-                                            <img src="img/WatchF1.jpg" alt=" Oliva Burton Watch" class="d-block w-100">
+                                            <img src="img/WatchF1.jpg" alt=" Oliva Burton Watch" class="d-block w-100" >
                                         </figure>
                                         <figure class="carousel-item">
-                                            <img src="img/WatchF2.jpg" alt="Paul Hewitt Watch" class="d-block w-100">
+                                            <img src="img/WatchF2.jpg" alt="Paul Hewitt Watch" class="d-block w-100" >
                                         </figure>
                                         <figure class="carousel-item">
-                                            <img src="img/WatchF3.jpg" alt="Paul Hewitt Watch" class="d-block w-100">
+                                            <img src="img/WatchF3.jpg" alt="Paul Hewitt Watch" class="d-block w-100" >
                                         </figure>
 
                                     </div>
@@ -126,89 +78,45 @@ and open the template in the editor.
                         <section class="col-md-7">
                             <p class="new-arrival text-center">NEW</p>
                             <h2>Men and Women's Watches</h2>
-                            <p>Product Code: A12345Z </p>
+                            <p>Product Code: A12345Z </p> 
                             <figure class="star-rating">
                                 <span class="fa fa-star" data-rating="1"></span>
                                 <span class="fa fa-star" data-rating="2"></span>
                                 <span class="fa fa-star" data-rating="3"></span>
                                 <span class="fa fa-star" data-rating="4"></span>
                                 <span class="fa fa-star-half-o" data-rating="5"></span>
-                            </figure>
+                            </figure> 
                             <p class="price">SGD $40.00 </p>
                             <p><b>Availability</b> In Stock </p>
                             <p><b>Condition</b> New </p>
                             <p><b>Brand</b> ABC.Co </p>
                             <label>Quantity: </label>
                             <input type="text" value="">
-                            <button type="button" class="btn btn-primary"> Add to Cart</button>
+                            <button type ="button" class="btn btn-primary"> Add to Cart</button>
                         </section>
-                    </section>
+                    </section>    
 
                     <section class="productDescription">
                         <section class="container">
                             <h3>Product Description</h3>
-                            <p>This is the Product Description LOL. This is the Product Description LOL.This is the
-                                Product Description LOLThis is the Product Description LOL
-                                This is the Product Description LOLThis is the Product Description LOLThis is the
-                                Product Description LOLThis is the Product Description LOLThis is the Product
+                            <p>This  is the Product Description LOL. This  is the Product Description LOL.This  is the Product Description LOLThis  is the Product Description LOL
+                                This  is the Product Description LOLThis  is the Product Description LOLThis  is the Product Description LOLThis  is the Product Description LOLThis  is the Product 
                                 Description LOL</p>
 
-                            <p>This is the Product Description LOL. This is the Product Description LOL.This is the
-                                Product Description LOLThis is the Product Description LOL
-                                This is the Product Description LOLThis is the Product Description LOLThis is the
-                                Product Description LOLThis is the Product Description LOLThis is the Product
+                            <p>This  is the Product Description LOL. This  is the Product Description LOL.This  is the Product Description LOLThis  is the Product Description LOL
+                                This  is the Product Description LOLThis  is the Product Description LOLThis  is the Product Description LOLThis  is the Product Description LOLThis  is the Product 
                                 Description LOL</p>
 
-                            <hr />
+                            <hr/>
                         </section>
                     </section>
                 </section>
         </article>
 
-        <footer class="footer">
-            <div class=container>
-                <div class="row">
-
-                    <div class="col-md-4">
-                        <h1>Company</h1>
-                        <p>About Us</p>
-                        <p>Contact Us</p>
-                    </div>
-
-                    <div class="col-md-4">
-                        <h1>Customer Support</h1>
-                        <a href="">
-                            <p>FAQ</p>
-                        </a>
-                        <a href="">
-                            <p>Contact Us</p>
-                        </a>
-                        <a href="">
-                            <p>Customer Service</p>
-                        </a>
-                    </div>
-
-                    <div class="col-md-4">
-                        <h1>Follow Us On</h1>
-                        <a href="https://www.facebook.com/">
-                            <p><i class="fa fa-facebook-official"></i> Facebook</p>
-                        </a>
-                        <a href="https://www.youtube.com/">
-                            <p><i class="fa fa-youtube-play"></i> Youtube</p>
-                        </a>
-                        <a href="https://www.linkedin.com/">
-                            <p><i class="fa fa-linkedin"></i> LinkedIn</p>
-                        </a>
-                        <a href="https://twitter.com/">
-                            <p><i class="fa fa-twitter"></i> Twitter</p>
-                        </a>
-                    </div>
-                </div>
-                <hr />
-                <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
-            </div>
-        </footer>
+        <nav class="container-fluid navbar-fixed-bottom footer foot text-center">
+            <a href="ProductPage.html">Home |</a>
+            <a href="">Browse |</a>
+            <a href="">Search </a>
+            <p><i>Copyright &copy; 2014 Share Your Travel</i></p>
+        </nav>
     </body>
-</body>
-
-</html>
