--- a/ONtime/public_html/productsreview.html
+++ b/ONtime/public_html/productsreview.html
@@ -13,6 +13,7 @@ and open the template in the editor.
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reviews.css" type="text/css" />
     <link rel="stylesheet" href="css/headerFooter.css" type="text/css" />
+    <script scr= "js/productReview.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
     </script>
     <script src="js/bootstrap.min.js">
